# cannoli

./: Cargo.toml  README.md
cannonball/: Cargo.toml  build.rs
cannonball/jithook/: .gitignore
cannonball/src/: cannonball_tracer.rs  cannonball_tracer_context.rs  jithook_gen.rs  lib.rs  main.rs  maps.rs  qemu_exec.rs
cannonball/tests/: test_cantrace.rs  test_elf.rs
cannonball/tests/bins/: AIS-Lite-nopie
cannonball/tests/bundles/qemu/exodus/bundles/42df351cf5c3b6f6f819f7552eb3dd1e6674a13ec7badc933461cda56bad1ba0/lib64/: libc.so.6  libglib-2.0.so.0  libgmodule-2.0.so.0  libpcre2-8.so.0
cannonball/tests/inputs/: poll_AIS-Lite_0.poll  poll_AIS-Lite_1.poll  poll_AIS-Lite_19.poll  poll_AIS-Lite_5.poll  poll_AIS-Lite_8.poll
cantrace/: Cargo.toml
cantrace/src/: can_tracer.rs  can_tracer_context.rs  cov.rs  elf.rs  lib.rs  main.rs  maps.rs  trace_entry.rs
cantrace/tests/: gettext.rs  test_cantrace.rs  test_elf.rs
cantrace/tests/bins/: AIS-Lite-pie
cantrace/tests/bundles/qemu/exodus/bundles/42df351cf5c3b6f6f819f7552eb3dd1e6674a13ec7badc933461cda56bad1ba0/lib64/: ld-linux-x86-64.so.2  libgcc_s.so.1  libm.so.6
cantrace/tests/inputs/: poll_AIS-Lite_10.poll  poll_AIS-Lite_11.poll  poll_AIS-Lite_12.poll  poll_AIS-Lite_13.poll  poll_AIS-Lite_14.poll  poll_AIS-Lite_15.poll  poll_AIS-Lite_16.poll  poll_AIS-Lite_17.poll  poll_AIS-Lite_18.poll  poll_AIS-Lite_2.poll  poll_AIS-Lite_3.poll  poll_AIS-Lite_4.poll  poll_AIS-Lite_6.poll  poll_AIS-Lite_7.poll  poll_AIS-Lite_9.poll
ctrace/: Cargo.toml
ctrace/src/: lib.rs  main.rs
jithook/: Cargo.toml
jithook/src/: lib.rs
