[package]
name = "cannonball"
version = "0.1.0"
edition = "2021"

[build-dependencies]
xz = "0.1.0"
curl = "0.4.44"
num_cpus = "1.13.1"
tar = "0.4.38"

[dev-dependencies]
serial_test = "0.9.0"

[dependencies]
serde_derive = { version = "1.0" }
serde = { version = "1.0" }
cannoli = { path = "../cannoli" }
mempipe = { path = "../mempipe" }
yaxpeax-x86 = { version = "1.1.4", default-features = true }
yaxpeax-arch = { version = "0.2.7", features = [
    "std",
    "address-parse",
    "use-serde",
] }
object = { version = "0.29.0" }
cc = "1.0"
clap = { version = "4.0.0", features = ["derive", "cargo"] }
uuid = { version = "1.1.2", features = ["v4"] }
serde_json = "1.0"
indicatif = "0.17.1"

[env]
RUST_TEST_THREADS = "1"
