[package]
name = "cantrace"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
serial_test = "0.9.0"

[dependencies]
serde_derive = { version = "1.0" }
serde = { version = "1.0" }
cannoli = { path = "../cannoli" }
mempipe = { path = "../mempipe" }
yaxpeax-x86 = { version = "1.1.4", default-features = true }
yaxpeax-arch = { version = "0.2.7", features = [
    "std",
    "address-parse",
    "use-serde",
] }
object = { version = "0.29.0" }
cc = "1.0"
clap = { version = "3.2.22", features = ["derive", "cargo"] }
uuid = { version = "1.1.2", features = ["v4"] }
serde_json = "1.0"
indicatif = "0.17.1"
log = "0.4.17"
simple_logger = "2.3.0"

[env]
RUST_TEST_THREADS = "1"
