[package]
name = "cantracer"
version = "0.1.0"
edition = "2021"

[dependencies]
cannoli = { path = "../cannoli" }
yaxpeax-x86 = { version = "1.1.4", default-features = true }
yaxpeax-arch = { version = "0.2.7", features = [
    "std",
    "address-parse",
    "use-serde",
] }
object = { version = "0.29.0" }
cc = "1.0"
